gcc/testsuite/rust/rustc/ui/error-codes/E0453_dg.rs
#![forbid(non_snake_case)]

#[allow(non_snake_case)]
// { dg-error ".E0453." "" { target *-*-* } .-1 }
fn main() {
}

